# SortingAlgorithms

./: CMakeLists.txt  README.md  main.cpp
Algorithms/: algorithms.cpp  algorithms.h  mergesort.cpp
Algorithms/BubbleSort/: BubbleSort.cpp  BubbleSort.h
Algorithms/InsertionSort/: InsertionSort.cpp  InsertionSort.h
Algorithms/MergeSort/: mergesort.h
Algorithms/QuickSort/: QuickSort.cpp  QuickSort.h
Algorithms/SelectionSort/: SelectionSort.cpp  SelectionSort.h
